--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Single Page Apps for GitHub Pages</title>
     <meta name="description" content="Lightweight solution for deploying single page apps with GitHub Pages. Code and concept by Rafael Pedicini.">
 
+    <link rel="stylesheet" type="text/css" href="portfolio.css"/>
+
     <style>
       html, body, div, span, a, p, ul, li, h1, code, nav {
         margin: 0;
