--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Evelinas Portfolio</title>
     <meta name="description" content="portfolio">
 
+    <link rel="shortcut icon" href="http://www.evelinalaroussi.github.io/favicon.ico"/>
+
     <link rel="stylesheet" type="text/css" href="portfolio.css"/>
 
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
