--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Evelinas Portfolio</title>
     <meta name="description" content="portfolio">
 
-    <link rel="shortcut icon" href="http://www.evelinalaroussi.github.io/favicon.ico"/>
+    <link rel="shortcut icon" href="http://evelinalaroussi.github.io/favicon.ico"/>
 
     <link rel="stylesheet" type="text/css" href="portfolio.css"/>
 
