--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Evelinas Portfolio</title>
-    <meta name="description" content="portfolio">
+    <title>Evelina Laroussi Portfolio</title>
+    <meta name="description" content="This is the portfolio of me, Evelina Laroussi, a engineer in mediatechnology and frontend developer. Visist me to read about me, my projects and work.">
 
     <link rel="shortcut icon" href="http://evelinalaroussi.github.io/favicon.ico"/>
 
-    <link rel="stylesheet" type="text/css" href="portfolio.css"/>
+    <link rel="stylesheet" type="text/css" href="/portfolio.css"/>
 
 
     <!-- Start Single Page Apps for GitHub Pages -->
